--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -4,7 +4,7 @@
   background-color: #f5f5f5;
   padding: 20px;
 
-  &__titolo {
+  h1 {
     text-align: center;
     font-size: 32px;
     color: #333;
