--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -1,10 +1,11 @@
 // App.scss
 .app-container {
+  color: #000;
   min-height: 100vh;
   background-color: #f5f5f5;
   padding: 20px;
 
-  h1 {
+  h1, h2 {
     text-align: center;
     font-size: 32px;
     color: #333;
