--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -1,14 +1,18 @@
-// App.scss
+// Variabili scss per i colori
+$color-black: #000;
+$color-background: #f5f5f5;
+$color-text: #333;
+
 .app-container {
-  color: #000;
+  color: $color-black;
   min-height: 100vh;
-  background-color: #f5f5f5;
-  padding: 20px;
+  background-color: $color-background;
+  padding: 1.25rem;
 
   h1, h2 {
     text-align: center;
-    font-size: 32px;
-    color: #333;
-    margin-bottom: 30px;
+    font-size: 2rem; 
+    color: $color-text;
+    margin-bottom: 1.875rem;
   }
 }
