--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -1,3 +1,5 @@
+@import './styles/chessboard.scss';
+
 #root {
   max-width: 1280px;
   margin: 0 auto;
@@ -41,7 +43,6 @@
   color: #888;
 }
 
-/* Modale promozione pedone */
 .promotion-modal-overlay {
   position: fixed;
   inset: 0;
